public/css/style.css
/* ... */
/* Back to top button */
.back-to-top {
  position: fixed;
  display: none;
  background: rgba(0, 0, 0, 0.2);
  color: #fff;
  padding: 6px 12px 9px 12px;
  font-size: 16px;
  border-radius: 2px;
  right: 15px;
  bottom: 15px;
  transition: background 0.5s;
}

@media (max-width: 768px) {
  .back-to-top {
    bottom: 15px;
  }

  /*Ricard custom*/


  .hold {
    margin: 5px 1px;
  
  }
}
@media (max-width: 991px){

  .hold {
    margin: 5px 1px;
  }

}




.back-to-top:focus {
  background: rgba(0, 0, 0, 0.2);
  color: #fff;
  outline: none;
}

.back-to-top:hover {
  background: #03c4eb;
  color: #fff;
}

/*--------------------------------------------------------------
# Welcome
--------------------------------------------------------------*/




#hero {
  display: table;
  width: 100%;
  height: 100vh;
  /*background: url(../img/medipedi.jpg) top center fixed;*/
  /* background:  url(../img/IMG_9641-min.JPG) top center fixed; */
  background:  url(../img/gys1.png) top center fixed;
  background-size: cover;
  margin: 0;

}

@media (max-width: 600px)
{
  #hero {
    display: table;
    width: 100%;
    /* max-width: 420px; */
    height: 100vh;
    /*background: url(../img/medipedi.jpg) top center fixed;*/
    /*background:rgba(87, 0, 87, 0.9);*/
    /* background:  url(../img/IMG_9641-min.JPG) top center fixed; */
    background:  url(../img/gys1.png)  bottom center fixed;
   background-size: 2600px 1000px;

  }
}



/* #hero .hero-logo {
  margin-bottom: 120px;
} */


@media (max-width: 768px) { 
  #hero .hero-logo img {
    margin-top: 10px;
  }
 }


#hero .hero-logo img {
 
  min-width: 280px;
  margin-top: 50px;

}


#hero .hero-container {

  /* background: rgba(204, 109, 198, 0.685); */
   /* background: rgba(168, 37, 185, 0.623); */
  /* background:  rgba(51, 51, 51, 0.473) ; */
  /* background: linear-gradient(
    rgba(36, 36, 36, 0.5),rgba(46, 204, 224, 0.2));  /* rgba(133, 27, 143, 0.3), */
    background:rgba(36, 36, 36, 0.35);
  /* background: rgba(241, 227, 241, 0.3);*/
  /*background: rgba(171, 50, 241, 0.8);*/
  display: table-cell;
  margin: 0;
  padding: 0;
  text-align: center;
  vertical-align: middle;
}

#hero h1 {
  margin: 20px 0 5px 0;
  font-weight: 700;
  line-height: 48px;
  font-size: 80px;
  text-transform: uppercase;
  color: #fff;
}

@media (max-width: 768px) {
  #hero h1 {
    font-size: 32px;
    line-height: 36px;
    margin-top: 80px;
    height: 120%;
  }
}

#hero h2 {
  color: white; /*color changed 999*/
  margin-bottom: 50px;
}

@media (max-width: 768px) {
  #hero h2 {
    font-size: 18px;
    line-height: 26px;
    margin-bottom: 20px;
    height: 20px;
  }
  #hero h2 .rotating {
    display: block;
  }
}

#hero .rotating > .animated {
  display: inline-block;
}

#hero .actions a {
  font-family: 'Raleway', sans-serif;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 20px;
  border-radius: 2px;
  transition: 0.5s;
  margin: 10px;
}

#hero .btn-get-started {
  background: #46A342;
  border: 2px solid #46A342;
  color: #fff;
  min-width:160px;
}

#hero .btn-get-started:hover {
  background: none;
  border: 2px solid #fff;
  color: #fff;
}

#hero .btn-services {
  border: 2px solid #fff;
  color: #fff;
  min-width:160px;
}

#hero .btn-services:hover {
  background: #46A342;
  border: 2px solid #46A342;
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/



#header {
  /*background: #111;*/
  background: transparent;
  padding: 20px 0;
  height: 90px;
  margin: 0;
  z-index: 1000;
 
}

#header #logo {
  float: left;
}

#header #logo h1 {
  font-size: 36px;
  margin: 0;
  padding: 6px 0;
  line-height: 1;
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  letter-spacing: 3px;
  text-transform: uppercase;
}

#header #logo h1 a,
#header #logo h1 a:hover {
  color: #fff;
}

#header #logo img {
  padding: 0;
  margin: 0;
 
  max-height: 50px;
}

@media (max-width: 768px) {
  #header {
    height: 80px;
  }
  #header #logo h1 {
    font-size: 26px;
  }
  #header #logo img {
    max-height: 40px;
  }

/* CUSTOM*/
#logo{
  height: 140px;
top:0;

display: none;
}

}


.is-sticky #header {
  background: rgb(24, 24, 24);
  opacity: 1;
  width: 100%;
 
  /* background: rgba(0, 0, 0, 0.85);*/
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/* Nav Menu Essentials */
.nav-menu,
.nav-menu * {
  margin: 0;
  padding: 0;
  list-style: none;
}

.nav-menu ul {
  position: absolute;
  display: none;
  top: 100%;
  left: 0;
  z-index: 99;
}

.nav-menu li {
  position: relative;
  white-space: nowrap;
}

.nav-menu > li {
  float: left;
}

.nav-menu li:hover > ul,
.nav-menu li.sfHover > ul {
  display: block;
}

.nav-menu ul ul {
  top: 0;
  left: 100%;
}

/* trouble? */
.nav-menu ul li {
  min-width: 180px;
}

/* Nav Menu Arrows */
.sf-arrows .sf-with-ul {
  padding-right: 30px;
}

.sf-arrows .sf-with-ul:after {
  content: '\f107';
  position: absolute;
  right: 15px;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
}

.sf-arrows ul .sf-with-ul:after {
  content: '\f105';
}

/* Nav Meu Container */
#nav-menu-container {
  float: right;
  /*  keeps big menu action on the right */
  margin: 5px 0;

 
}




@media (max-width: 768px) {
  #nav-menu-container {
    display: none;
  }
}

/* Nav Meu Styling */
.nav-menu a {
  padding: 10px 15px;
  text-decoration: none;
  display: inline-block;
  color: #fff;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-size: 14px;
  outline: none;
}

.nav-menu a:hover,
.nav-menu li:hover > a,
.nav-menu .menu-active > a {
  color: #03c4eb;
}

.nav-menu ul {
  margin: 4px 0 0 15px;
  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.08);
}

.nav-menu ul li {
  background: #fff;
  border-top: 1px solid #f4f4f4;
}
/* ... */

